Added Http inteceptor to authenticate Rest api calls

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,4 +4,9 @@
   </h1>
   <h3>User:</h3>
   <p *ngIf="user">{{user | json}}</p>
+  <h3>All Users</h3>
+  <button (click)="getAllUsers()">Get All Users</button>
+  <ul *ngFor="let user of users$">
+    <li>{{user | json}}</li>
+  </ul>
 </div>
