added file dependencies for bootstrap, minimal styling to login page

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,14 +1,17 @@
-<h4>Login</h4>
-<p>
-  <label for="email">Email:</label>
-  <input type="text" #email name="email">
-</p>
-<p>
-  <label for="password">Password:</label>
-  <input type="password" #password name="password">
-</p>
-<button (click)="login(email.value, password.value)">Login</button>
-<p>
-  Don't have an account?
-  <a routerLink="/signup">Sign Up</a>
-</p>
+<div class="container">
+
+  <h4>Login</h4>
+  <p>
+    <label for="username">Username:</label>
+    <input type="text" #usename name="username">
+  </p>
+  <p>
+    <label for="password">Password:</label>
+    <input type="password" #password name="password">
+  </p>
+  <button class="btn btn-primary" (click)="login(usename.value, password.value)">Login</button>
+  <p>
+    Don't have an account?
+    <a routerLink="/signup">Sign Up</a>
+  </p>
+</div>
