Change to Login page heading

--- a/src/client/app/auth/login/login.component.html
+++ b/src/client/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-sm-5">
       <div class="card">
-        <h5 class="card-header text-center">Login</h5>
+        <h5 class="card-header text-center">Login to AngPassAuth</h5>
         <div class="card-body p-5">
           <div class="form-group row">
             <label for="username" class="col-form-label-sm col-sm-3">Username:</label>
